--- a/themes/custom-theme/theme/mytheme/login/resources/css/styles.css
+++ b/themes/custom-theme/theme/mytheme/login/resources/css/styles.css
@@ -9,6 +9,13 @@ body {
   overflow-x: hidden;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 .login-pf body {
   background-image: url("../img/background_img.png");
 }
@@ -18,6 +25,18 @@ body {
     background-image: none;
   }
 }
+
+/* .login-pf-page {
+  display: flex;
+}
+
+.background-contain {
+  background-image: url("../img/background_img1.png");
+  flex-grow: 1;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+} */
 
 /* Card keycloak */
 
@@ -49,7 +68,7 @@ body {
   padding-left: 124px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
   .login-pf-page .card-pf {
     padding: 0;
   }
@@ -81,8 +100,24 @@ body {
   }
 
   .image-contain {
-    flex-grow: 1;
     right: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    padding-top: 66.6%;
+    position: relative;
+    background-image: url("../img/background_img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .img-logo {
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    width: 30%;
   }
 }
 
